--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="title_activity_setup">Set Up Your Game</string>
     <string name="set_num_players">Number of heroes:</string>
     <string name="action_settings">Settings</string>
+    <string name="button_randomize">Gimme some Sentinels!</string>
+    <string name="title_activity_result">Random Sentinels</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
