--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2014 Adam Howard <aeh AT aehdev DOT net>.
+  ~ Copyright (c) 2015 Adam Howard <aeh AT aehdev DOT net>.
   ~
   ~ This file is part of Random Sentinels.
   ~
@@ -16,7 +16,7 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with Random Sentinels. If not, see <http://www.gnu.org/licenses/>.
--->
+  -->
 <resources>
 
     <string name="app_name">Random Sentinels</string>
@@ -31,5 +31,9 @@
     <string name="heroes">Heroes</string>
     <string name="villain">Villain</string>
     <string name="environment">Environment</string>
+    <string name="title_activity_about">About</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_options_menu">OptionsMenuActivity</string>
 
 </resources>
